--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 *.mp4
-/Software/Doku/info.txt
-/Software/BBB/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/
+/Software/Doku/infos.txt
+/Software/BBB/BeagleBone/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/
