--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *.mp4
 /Software/Doku/infos.txt
 /Software/BBB/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/
+/Software/BBB/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/*
