--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Software/Doku/infos.txt
 /Software/BBB/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/
 /Software/BBB/build-BeagleBone-Desktop_Qt_5_15_2_GCC_64bit-Debug/*
+.vscode/
