--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 
 /Software/BBB/build-BeagleBone-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/
 /Software/BBB/build-BeagleBone-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/*
+
+Software/BBB/build-*
+Software/GUI/build-*
 .vscode/
 .vscode/*
 
