--- a/Software/build-SimuladorPuertoSerieFPGA-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Makefile.Release
+++ b/Software/build-SimuladorPuertoSerieFPGA-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Makefile.Release
@@ -1120,54 +1120,7 @@ release/MainWindow.o: ../SimuladorPuertoSerieFPGA/MainWindow.cpp ../SimuladorPue
 		C:/Qt/6.5.0/mingw_64/include/QtCore/qbasictimer.h \
 		../SimuladorPuertoSerieFPGA/MotorDriver.h \
 		C:/Qt/6.5.0/mingw_64/include/QtCore/QString \
-		ui_MainWindow.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/QVariant \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QApplication \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qapplication.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qcoreapplication.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qeventloop.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qcoreapplication_platform.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qfuture.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qfutureinterface.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qmutex.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qtsan_impl.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qresultstore.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qfuture_impl.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qthreadpool.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qthread.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qdeadlinetimer.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qelapsedtimer.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qrunnable.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qexception.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qpromise.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qguiapplication.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qinputmethod.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qlocale.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qguiapplication_platform.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QGridLayout \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qgridlayout.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qlayout.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qboxlayout.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QLabel \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qlabel.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qframe.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qpicture.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qtextdocument.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QMenuBar \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qmenubar.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qmenu.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QPushButton \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qpushbutton.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qabstractbutton.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QSpinBox \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qspinbox.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qabstractspinbox.h \
-		C:/Qt/6.5.0/mingw_64/include/QtGui/qvalidator.h \
-		C:/Qt/6.5.0/mingw_64/include/QtCore/qregularexpression.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QStatusBar \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/qstatusbar.h \
-		C:/Qt/6.5.0/mingw_64/include/QtWidgets/QWidget
+		ui_MainWindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\MainWindow.o ..\SimuladorPuertoSerieFPGA\MainWindow.cpp
 
 release/moc_Fpga.o: release/moc_Fpga.cpp 
